sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: not found: value getNombresValeurs
    for (i<- 0 to getNombresValeurs-2) {
                  ^